tests/snapshot/error/source_locations/expression/yield_star/return_check_iterator_result_object_throws.exp
TypeError: iterator result must be an object
   ┌ source_locations/expression/yield_star/return_check_iterator_result_object_throws.js:15:3
   |
15 |   yield* iterable;
   |   ^
Stack trace:
  at generator (source_locations/expression/yield_star/return_check_iterator_result_object_throws.js:15:3)
  at return (<native>)
  at <global> (source_locations/expression/yield_star/return_check_iterator_result_object_throws.js:20:1)